src/theme/sass/components/_player.scss
// Most styles are shared between the browser footer and the xbmc footer

// Positioning
#footer,
#browser-player-footer {
  background: $color-slate;
  height: 63px;
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 50;
  @include breakpoint($width-tablet){
    height: $height-footer;
  }

  .footer-left {
    position: absolute;
    right: 10px;
    top: 7px;
    width: 120px;
    .player-button {
      width: 33.33%;
      @include box-sizing(border-box);
      padding: 19px 0;
      font-size: 1.4em;
      float: left;
      text-align: center;
      color: #979EA0;
      cursor: pointer;
      &:hover {
        color: $color-mist;
      }
      &.player-play {
        font-size: 1.9em;
        padding: 14px 0;
      }
    }
    @include breakpoint($width-tablet){
      float: left;
      width: $width-sidebar-second-small;
      height: $height-footer;
      background: $color-light-slate;
      position: static;
      right: auto;
      bottom: auto;
      .player-button {
        font-size: 1.8em;
        &.player-play {
          font-size: 2.5em;
        }
      }
    }
  }
  .footer-right {
    width: auto;
    height: 40px;
    background: $color-light-slate;
    display: none;
    position: fixed;
    top: 50px;
    left: 0;
    right: 0;
    .actions-wrapper {
      position: absolute;
      right: 0px;
      top: 25px;
      text-align: right;
      width: $width-sidebar-second-small;
      display: none;
      .player-button {
        font-size: 2em;
        padding: 3px 0;
        width: 25%;
        float: left;
        text-align: center;
        cursor: pointer;
        color: #979EA0;
        .fa-volume-up {
          display: none;
        }
        &:hover {
          color: $color-mist;
        }
      }
    }
    @include breakpoint($width-tablet){
      display: block;
      position: static;
      float: right;
      width: $width-sidebar-second-small;
      height: $height-footer;
      .actions-wrapper {
        display: block;
      }
    }
  }
  .volume-wrapper,
  .progress-wrapper {
    background: rgba(0,0,0,0.1);
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    height: 18px;
    overflow: hidden;
    @include breakpoint($width-tablet){
      left: $width-sidebar-second-small + $height-footer;
      right: $width-sidebar-second-small;
    }
  }
  .volume-wrapper {
    right: 10px;
    left: 10px;
    margin: 10px 0;
    @include breakpoint($width-tablet){
      right: 0;
      left: auto;
      width: $width-sidebar-second-small;
      margin: 0;
    }
  }
  #time,
  #browser-time {
    position: absolute;
    margin-top: 25px;
    right: 10px;
    top: 0;
    font-weight: bold;
    text-align: right;
    display: none;
    .time-cur {
      display: block;
      color: #fff;
      font-size: 15px;
      height: 20px;
    }
    .time-total {
      font-size: 12px;
    }
    @include breakpoint($width-tablet){
      right: $width-sidebar-second-small + 10px;
      display: block;
    }
  }
}

// Now Playing
#now-playing,
#browser-now-playing {
  position: absolute;
  white-space: nowrap;
  font-size: 12px;
  margin-right: 0;
  margin-left: 0;
  padding-top: 1px;
  .song-image {
    width: 50px;
    height: 50px;
    margin-right: 10px;
    overflow: hidden;
    float: left;
    margin-top: 12px;
    background-size: cover;
    img {
      height: 50px;
      display: block;
    }
    .fa {
      background: rgba(0, 0, 0, 0.5);
      width: 70px;
      height: 70px;
      line-height: 70px;
      text-align: center;
      color: #DDD;
      font-size: 24px;
      display: none;
    }
    @include breakpoint($width-tablet){
      width: $height-footer;
      margin-top: -1px;
      height: $height-footer;
      &:hover {
        .fa {
          display: block;
        }
      }
      img {
        height: $height-footer;
      }
    }
  }
  .playing-song-title,
  .browser-playing-song-title {
    color: #fff;
    font-size: 15px;
    display: block;
    margin-top: 20px;
    height: 20px;
    overflow: hidden;
    white-space: nowrap;
    margin-right: 130px;
    @include breakpoint($width-tablet){
      margin-top: 25px;
      margin-right: 0px;
    }
  }
  .song-artist {
    color: #ddd;
  }
  @include breakpoint($width-tablet){
    margin-right: $width-sidebar-second-small + 70;
    margin-left: $width-sidebar-second-small;
  }
}

// Volume bar
#volume,
#progress-bar,
#browser-volume,
#browser-progress-bar {
  &.ui-slider {
    @include border-radius(0);
    height: 12px;
    border: none;
    background: none;
    .ui-slider-range {
      @include border-radius(0);
      @include transition(0.3s all linear);
      background: rgba(208, 210, 213, 0.21);
      border-top: 0px solid rgba(208, 210, 213, 0.21);
    }
    .ui-slider-handle {
      @include border-radius(0);
      @include transition(0.3s all linear);
      top: 0;
      margin-left: -0.4em;
      background: rgba(208, 210, 213, 0.9);
      width: 7px;
      border: 0;
      cursor: pointer;
      display: none;
    }
    &:hover {
      .ui-slider-handle {
        display: block;
      }
    }
    @include breakpoint($width-tablet){
      height: 20px;
    }
  }

}


#browser-progress-bar {
  position: relative;
  z-index: 10;
  cursor: pointer;
}


#browser-progress-buffer {
  @include transition(2s all linear);
  position: absolute;
  top: 0;
  width: 100%;
  left: 0;
  z-index: 0;
  background: #606364;
  height: 20px;
}


// hide broswer footer by default
#browser-player-footer {
  display: none;
  background: $color-darkest-local;
  .fa-pause {
    display: none;
  }
  .footer-left,
  .footer-right {
    background: $color-dark-local;
  }
  #browser-volume .ui-slider-range,
  #browser-progress-bar.ui-slider .ui-slider-range {
    background: rgba(237, 238, 240, 0.4);
  }

  #browser-volume.ui-slider:hover .ui-slider-handle,
  #browser-progress-bar.ui-slider:hover .ui-slider-handle {
    background: rgba(255, 255, 255, 0.9);
  }
}

a.party-mode {
  i {
    display: none;
    float: right;
    color: $color-carrot;
    font-size: 12px;
    padding-top: 5px;
  }
}

body {
  // not connected! using a few importants to force this state
  &.notconnected {
    #header #logo {
      background: #7a1f11;
      border-bottom-color: #511e14 !important;
    }
    .track.playing-row {
      background-image: image-url('icons/row-pause.png') !important;
    }
  }
  // xbmc player
  .player-play .fa-pause {
    display: none;
    margin-top: 3px;
  }
  &.paused,
  &.playing {
    .playing-row {
      //background: $color-clouds;
      .song-tracknum {
        //eq level display playing
        background: image-url('row-playing.gif') 50% 50% no-repeat;
        text-indent: -999999px;
      }
    }
  }
  // xbmc is playing
  &.playing {
    .player-play {
      .fa-pause {
        display: block;
      }
      .fa-play {
        display: none;
      }
    }
    #sidebar-second .sidebar-header .playlist-primary-tabs li.xbmc-tab i {
      color: $playing-xbmc;
      display: none;
      &.fa-play {
        display: inline;
      }
    }
    #header #logo {
      border-bottom-color: $playing-xbmc;
    }
    #progress-bar {
      &.ui-slider {
        .ui-slider-range {
          border-top: 3px solid $color-orange;
        }
      }
    }
  }
  // xbmc pause
  &.paused {
    //eq level display paused (quiet)
    .playing-row {
      .song-tracknum {
        background: image-url('icons/row-pause.png') 50% 50% no-repeat;
      }
    }
    ul.playlist {
      .playing-row {
        background-image: image-url('icons/row-pause.png');
      }
    }
  }
  // nothing playing
  &.notPlaying {

  }

  &.browser-playing {

  }

  &.muted {
    #footer .footer-right .actions-wrapper {
      .fa-volume-up {
        display: block;
      }
      .fa-volume-down {
        display: none;
      }
    }
  }

  &.random-on {
    #footer .footer-right .actions-wrapper {
      .player-random {
        color: #fff;
      }
    }
  }

  &.repeat-all {
    #footer .footer-right .actions-wrapper {
      .player-repeat {
        color: #fff;
      }
    }
  }

  &.repeat-one {
    #footer .footer-right .actions-wrapper {
      .player-repeat {
        color: #ddd;
      }
    }
    div.playlist-item.playing-row {
      .repeating {
        display: block;
      }
    }
  }


  // local body
  &.player-view-local {
    #footer {
      display: none;
    }
    #browser-player-footer {
      display: block;
    }
    #logo {
      background: $color-carrot;
    }
    #header {
      #logo {
        background:  $color-darkest-local;
        border-bottom-color: $color-darkest-local;
      }
    }
    #sidebar-second {
      .sidebar-header {
        background: $color-dark-local;
      }
    }
    #page-header {
      background: rgba(72, 78, 80, 0.84);
    }
    &.fixed-header #page-header {
      background: rgba(72, 78, 80, 0.97);
    }
  }

  // browser playing
  &.browser-playing {
    // sidebar playing row
    .browser-playlist-song-list div.playlist-item.browser-playing-row {
      background-image: image-url('row-playing.gif');
    }
    // footer play/pause
    #browser-player-footer .footer-left {
      .fa-play {
        display: none;
      }
      .fa-pause {
        display: inline;
      }
    }
    #sidebar-second .sidebar-header .playlist-primary-tabs li.local-tab i {
      color: $playing-local;
      display: none;
      &.fa-play {
        display: inline;
      }
    }
    #header #logo {
      border-bottom-color: $playing-local;
    }
    #browser-progress-bar.ui-slider .ui-slider-range {
      border-top: 3px solid $playing-local;
    }
  }

  // browser rand / repeat
  &.bp-random-on {
    #browser-player-footer .footer-right .browser-player-random {
      color: #EDEFF0;
    }
  }
  &.bp-repeat-all {
    #browser-player-footer .footer-right .browser-player-repeat {
      color: #EDEFF0;
    }
  }
  &.bp-repeat-one {
    #browser-player-footer .footer-right .browser-player-repeat {
      color: #DBDBDB;
    }
  }
  &.bp-mute {
    #browser-player-footer .footer-right .actions-wrapper .browser-player-mute {
      .fa-volume-down {
        display: none;
      }
      .fa-volume-up {
        display: inline;
        color: #eee;
      }
    }
  }

  &.section-remote {
    #footer {
      #now-playing .song-image {
        .fa-chevron-up {
          display: none;
        }
      }
    }
  }

  &.partymode-on {
    a.party-mode {
      i {
        display: block;
      }
    }
  }
}

